--- a/AnswerSheet_EX_NarjesMolapour21.ipynb
+++ b/AnswerSheet_EX_NarjesMolapour21.ipynb
@@ -44,13 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "99937553-2a26-4787-b365-d46f41243c5e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write code here:\n",
+    "\n",
     "class MyString(str):\n",
+    "  \n",
     "    ##1.Override the lower() method and \"!\"\n",
     "    def lower(self):\n",
     "        return super().lower() + \"!\"\n",
@@ -64,13 +65,25 @@
     "        return super().replace(old.upper(), new.upper(), count)\n",
     "    \n",
     "    ##4.Override the __add__() method\n",
-    "    def  the_add(self, other):\n",
+    "    def  __add__(self, other):\n",
     "        if isinstance(other, MyString):\n",
     "            return MyString(f\"{self} {other}\")\n",
     "        return NotImplemented\n",
     "\n",
     "    ##5.Override the __mul__() method\n",
-    "    def the_mul(self,n):\n",
+    "    def __mul__(self,n : int) -> 'MyString':\n",
+    "        \"\"\"\n",
+    "        Repeats the string with a dash (-) separating each repetition.\n",
+    "\n",
+    "        Args:\n",
+    "                n (int): The number of times to repeat the string.\n",
+    "\n",
+    "        Returns:\n",
+    "                MyString: The repeated string with a dash separator.\n",
+    "\n",
+    "        Raises:\n",
+    "            NotImplemented.\n",
+    "        \"\"\"\n",
     "        if isinstance(n, int):\n",
     "            return MyString(('-'.join([self] * n)))\n",
     "        return NotImplemented\n",
@@ -79,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "2099bc06",
    "metadata": {},
    "outputs": [
@@ -87,11 +100,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " i was born in bnd . happy briaday!\n",
+      " i was born in bnd . happy briaday.!\n",
       "8\n",
-      " I was born in BND . Happy Briaday I was born in BND . Happy Briaday I was born in BND . Happy Briaday\n",
-      " I was born in BND . Happy Briaday Narjes:)))\n",
-      " i was born in BND . Happy Briaday\n"
+      " I was born in BND . Happy Briaday.- I was born in BND . Happy Briaday.- I was born in BND . Happy Briaday.\n",
+      " I was born in BND . Happy Briaday. Narjes:)))\n",
+      " I was born in BND . Iappy Briaday.\n"
      ]
     }
    ],
@@ -102,8 +115,8 @@
     "print(d1.lower())\n",
     "print(d1.count_words())\n",
     "print(d1*3)\n",
-    "print(d1+\" \"+(\"Narjes:)))\"))\n",
-    "print(d1.replace(\"I\",\"i\"))"
+    "print(d1 + MyString(\"Narjes:)))\"))\n",
+    "print(d1.replace(\"h\",\"i\"))"
    ]
   },
   {
