--- a/AnswerSheet_EXNarjesMolapour_23.ipynb
+++ b/AnswerSheet_EXNarjesMolapour_23.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "99937553-2a26-4787-b365-d46f41243c5e",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,10 @@
     "        self.link = link\n",
     "\n",
     "    def __str__(self):\n",
-    "        return f\"Trac_name :{self.trac_name} ,artist_name:{self.artist_name} ,album_name :{self.album_name} , link:{self.link}\"\n",
+    "        return f\"Trac_name :{self.trac_name} ,\n",
+    "        artist_name:{self.artist_name} ,\n",
+    "        album_name :{self.album_name} ,\n",
+    "        link:{self.link}\"\n",
     "    \n",
     "class Music:\n",
     "    def __init__(self, url) :\n",
@@ -102,7 +105,7 @@
     "\n",
     "    def create_music(self):\n",
     "        data = self.requests_music()\n",
-    "        if not data or data.get('resultCount', 0) == 0:\n",
+    "        if not data :\n",
     "            print(\"Not found\")\n",
     "            return\n",
     "        track_items = data.get(\"results\", [])\n",
